...
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_margin_medium"
            android:layout_marginTop="@dimen/common_margin_medium"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/species_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/character_filter_species_hint"
                android:inputType="text"
                android:maxLength="100" />

...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_filter_cancel_button_text"
                android:textColor="?android:textColorPrimary" />

            <Button
                android:id="@+id/btn_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_filter_apply_button_text"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>
...
