<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/characters"
        android:contentDescription="@string/bottom_navigation_menu_characters_content_description"
        android:icon="@drawable/bottom_navigation_menu_characters_icon"
        android:title="@string/bottom_navigation_menu_characters_title" />
    <item
        android:id="@+id/locations"
        android:contentDescription="@string/bottom_navigation_menu_locations_content_description"
        android:icon="@drawable/bottom_navigation_menu_locations_icon"
        android:title="@string/bottom_navigation_menu_locations_title" />
    <item
        android:id="@+id/episodes"
        android:contentDescription="@string/bottom_navigation_menu_episodes_content_description"
        android:icon="@drawable/bottom_navigation_menu_episodes_icon"
        android:title="@string/bottom_navigation_menu_episodes_title" />
</menu>